clusters/izzy-cluster/ingresses-lan/leaderboard.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: leaderboard
  namespace: ingresses-lan
  annotations:
    cert-manager.io/cluster-issuer: http-issuer
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - leaderboard.izzy.kiwi
    secretName: leaderboard-tls
  rules:
  - host: leaderboard.izzy.kiwi
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: leaderboard
            port: 
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: leaderboard
  namespace: ingresses-lan
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: leaderboard
  namespace: ingresses-lan
  labels:
    kubernetes.io/service-name: leaderboard
addressType: IPv4
ports:
  - name: http
    appProtocol: http
    protocol: TCP
    port: 8000
endpoints:
  - addresses:
      - "192.168.200.302"
    conditions:
      ready: true
