clusters/izzy-cluster/ingresses-lan/pihole.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: ingresses-lan
  annotations:
    cert-manager.io/cluster-issuer: http-issuer
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    nginx.ingress.kubernetes.io/auth-tls-secret: default/ca-secret
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - pihole.izzy.kiwi
    secretName: pihole-tls
  rules:
  - host: pihole.izzy.kiwi
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pihole
            port: 
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: ingresses-lan
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: pihole
  namespace: ingresses-lan
  labels:
    kubernetes.io/service-name: pihole
addressType: IPv4
ports:
  - name: http
    appProtocol: http
    protocol: TCP
    port: 80
endpoints:
  - addresses:
      - "192.168.100.253"
    conditions:
      ready: true
