clusters/izzy-cluster/ingresses-lan/proxmox.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxmox
  namespace: ingresses-lan
  annotations:
    cert-manager.io/cluster-issuer: http-issuer
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    nginx.ingress.kubernetes.io/auth-tls-secret: ingress/ca-secret
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - clowder.izzy.kiwi
    secretName: proxmox-tls
  rules:
  - host: clowder.izzy.kiwi
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: proxmox
            port:
              number: 443
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox
  namespace: ingresses-lan
spec:
  ports:
  - protocol: TCP
    port: 443
    targetPort: 8006
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: proxmox
  namespace: ingresses-lan
  labels:
    kubernetes.io/service-name: proxmox
addressType: IPv4
ports:
  - name: https
    appProtocol: https
    protocol: TCP
    port: 8006
endpoints:
  - addresses:
      - "192.168.100.200"
      #- "192.168.100.201"
      #- "192.168.100.202"
    conditions:
      ready: true
