clusters/izzy-cluster/ingresses-lan/router.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: router
  namespace: ingresses-lan
  annotations:
    cert-manager.io/cluster-issuer: http-issuer
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    nginx.ingress.kubernetes.io/auth-tls-secret: ingress/ca-secret
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - router.izzy.kiwi
    secretName: router-tls
  rules:
  - host: router.izzy.kiwi
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: router
            port: 
              name: https
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: router-redirect
#   namespace: ingresses-lan
#   annotations:
#     cert-manager.io/cluster-issuer: http-issuer
#     nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
#     nginx.ingress.kubernetes.io/auth-tls-secret: ingress/ca-secret
#     nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
#     nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
#     nginx.ingress.kubernetes.io/server-snippet: |
#       return 301 $scheme://router.izzy.kiwi/cgi-bin/luci/web;
# spec:
#   ingressClassName: nginx
#   tls:
#   - hosts:
#       - router.izzy.kiwi
#     secretName: router-tls
#   rules:
#   - host: router.izzy.kiwi
#     http:
#       paths:
#       - path: /
#         pathType: Exact
#         backend:
#           service:
#             name: router
#             port: 
#               name: http
---
apiVersion: v1
kind: Service
metadata:
  name: router
  namespace: ingresses-lan
spec:
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: router
  namespace: ingresses-lan
  labels:
    kubernetes.io/service-name: router
addressType: IPv4
ports:
  - name: https
    appProtocol: https
    protocol: TCP
    port: 443
endpoints:
  - addresses:
      - "192.168.100.1"
    conditions:
      ready: true
