clusters/izzy-cluster/ingresses-lan/sharlot.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sharlot
  namespace: ingresses-lan
  annotations:
    cert-manager.io/cluster-issuer: http-issuer
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - chart.jankseason.com
    secretName: sharlot-tls
  rules:
  - host: chart.jankseason.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sharlot
            port: 
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: sharlot
  namespace: ingresses-lan
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: sharlot
  namespace: ingresses-lan
  labels:
    kubernetes.io/service-name: sharlot
addressType: IPv4
ports:
  - name: http
    appProtocol: http
    protocol: TCP
    port: 80
endpoints:
  - addresses:
      - "192.168.100.2"
    conditions:
      ready: true
