clusters/izzy-cluster/ingresses-lan/truenas.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: truenas
  namespace: ingresses-lan
  annotations:
    cert-manager.io/cluster-issuer: http-issuer
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    nginx.ingress.kubernetes.io/auth-tls-secret: default/ca-secret
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - truenas.izzy.kiwi
    secretName: truenas-tls
  rules:
  - host: truenas.izzy.kiwi
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: truenas
            port: 
              name: https
---
apiVersion: v1
kind: Service
metadata:
  name: truenas
  namespace: ingresses-lan
spec:
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: truenas
  namespace: ingresses-lan
  labels:
    kubernetes.io/service-name: truenas
addressType: IPv4
ports:
  - name: https
    appProtocol: https
    protocol: TCP
    port: 443
endpoints:
  - addresses:
      - "192.168.100.240"
    conditions:
      ready: true
